@@ -1,5 +1,6 @@
 0.0.0
 
+* Keep selection in sidebar when hiding layers/features.
 * Draw - Limit MINE CLUSTER to two points.
 * Hide/show features and layers; individual and selected.
 * Fix: Draw interaction for 2-point graphics (#3).
